welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:4: error: ')' expected but integer literal found.
	for (n <- ^0 to nums.length-1)
                   ^averageValue:10: error: illegal start of simple expression
}
^